# MMT

./: .gitignore  INSTALL.md  tutorial-setup.README
cli/opt/: mertinterface.py
docker/: Dockerfile  Dockerfile~
docker/dev/Ubuntu-12.04-with-conda/: Dockerfile
docker/dev/Ubuntu-16.04-native/: Dockerfile
docs/installation/: CONDA.md
scripts/mt/: lm.py
src/Core/src/main/java/eu/modernmt/core/facade/: TagFacade.java
src/Core/src/main/java/eu/modernmt/core/facade/operations/: ProjectTagsOperation.java
src/FastAlign/src/main/java/eu/modernmt/aligner/fastalign/: FastAlign.java
src/LuceneContextAnalyzer/src/main/java/eu/modernmt/context/lucene/: ContextAnalyzerIndex.java
src/Model/src/main/java/eu/modernmt/model/: Tag.java
src/Moses/native/: CMakeLists.txt
src/Moses/native/src/wrapper/: JNITranslationRequest.cpp  MosesDecoder.cpp  MosesDecoder.h
src/Moses/native/tests/: CMakeLists.txt  IncrementalBitext.h  MosesDecoderTests.cpp  StoWriteTests.cpp  filesystem.h
src/Moses/native/tests/res/: moses.template.ini  new_bitext_moses.template.ini
src/RESTInterface/src/main/java/eu/modernmt/rest/actions/translation/: TagsProjection.java
src/TextProcessing/src/main/java/eu/modernmt/processing/: AlignmentsInterpolator.java  Postprocessor.java
src/TextProcessing/src/main/java/eu/modernmt/processing/xml/: MappingTag.java  XMLTagProjector.java
src/TextProcessing/src/main/java/eu/modernmt/processing/xml/tag/: AbsolutePositionTagAligner.java  AttributesTagAligner.java  BooleanTagAligner.java  ContextTagAligner.java  NameTagAligner.java  ProbabilisticTagAligner.java  ProjectedTagAligner.java  RelativePositionTagAligner.java  TypeTagAligner.java
util/: full-recompile.sh  mmt.demo-client.py
